<resources>
    <string name="app_name">PantryScanner</string>
    <string name="confirmbutton">Sign Up</string>
    <string name="email_hint">Enter your email</string>
    <string name="enter_password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="welcome_message">Welcome to PantryScanner!</string>
    <string name="visit_pantry">Visit Your Pantry</string>
    <string name="scanner">go to scanner</string>
    <string name="preexisting_account">I already have an account</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="reset_password">Send reset link</string>
    <string name="welcome_message2">Welcome to SmartPantry!</string>
</resources>
